# -*- Mode:cmake -*-

####################################################################################################
#                                                                                                  #
# Copyright (C) 2015 University of Hull                                                            #
#                                                                                                  #
####################################################################################################

add_custom_target(render_all)
add_custom_target(test_render_all)

add_subdirectory(base)
